--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -29,3 +29,28 @@ h1 {
   border: none;
   width: 100%;
 }
+
+.button::before {
+  content: '➡';
+  position: absolute;
+  top: 1px;
+  left: 160px;
+  color: white;
+  transform: rotate(360deg);
+}
+
+.button:hover {
+  color: rgba(236, 76, 138, 1);
+}
+
+.container > *:nth-child(4n-1) .button,
+.container > *:nth-child(4n-2) .button {
+  background-color: rgba(200, 40, 110, 1);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(180px, auto);
+  height: 100vh;
+}
