--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -33,14 +33,16 @@ h1 {
 .button::before {
   content: '➡';
   position: absolute;
-  top: 1px;
-  left: 160px;
+  top: 10%;
+  right: 20px;
   color: white;
-  transform: rotate(360deg);
+  transform: translateY(-50%);
 }
 
 .button:hover {
+  background-color: rgb(255, 212, 212);
   color: rgba(236, 76, 138, 1);
+  transition: all 0.3s ease;
 }
 
 .container > *:nth-child(4n-1) .button,
@@ -48,9 +50,34 @@ h1 {
   background-color: rgba(200, 40, 110, 1);
 }
 
+.container > *:nth-child(4n-1) .button:hover,
+.container > *:nth-child(4n-2) .button:hover {
+  background-color: rgb(255, 212, 212);
+  color: rgba(236, 76, 138, 1);
+}
+
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: minmax(180px, auto);
   height: 100vh;
+}
+
+.banner {
+  background-image: url('banner.svg');
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.banner::after {
+  content: '';
+  background: rgba(236, 76, 138, 0.6);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
