--- a/src/components/details/DetailsPage.css
+++ b/src/components/details/DetailsPage.css
@@ -20,7 +20,7 @@ h1 {
   justify-content: space-between;
   margin: 0 0;
   padding: 35px 8px 35px 8px;
-  border-radius: 0px;
+  border-radius: 0;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   color: white;
 }
