--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -18,8 +18,6 @@ h1 {
   height: 100%;
   text-align: center;
   text-decoration: none;
-
-  /* display: flex; */
   align-items: center;
   justify-content: center;
   font-size: 16px;
@@ -28,6 +26,7 @@ h1 {
   position: relative;
   border: none;
   width: 100%;
+  max-height: 280px;
 }
 
 .button::before {
@@ -80,4 +79,11 @@ h1 {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .button {
+    width: 100%;
+    max-height: 220px;
+  }
 }
