Update node version and fix linter error

--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -1,8 +1,8 @@
 .filter-container {
   margin: 10px 0 10px 4px;
   display: flex;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .filter-label {
