--- a/src/components/details/DetailsPage.css
+++ b/src/components/details/DetailsPage.css
@@ -17,21 +17,21 @@ h1 {
 
 .back-link {
   display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
+  padding: 12px 22px;
   color: black;
   background-color: white;
   text-decoration: none;
   border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: all 0.3s ease;
+  margin: 20px 0 15px 8px;
 }
 
 .back-link:hover {
   background-color: rgba(255, 255, 255, 0.7);
   transform: scale(1.05);
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .detail {
@@ -91,4 +91,82 @@ h1 {
 .info p {
   color: white;
   line-height: 1.6;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media screen and (min-width: 768px) {
+  .detail {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 40px 9px 40px 9px;
+    font-size: 1.4em;
+  }
+
+  .back-link {
+    font-size: 1.1em;
+    padding: 15px 25px;
+    margin: 0 0 15px 8px;
+  }
+
+  .banner2 {
+    height: 600px;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+  .detail {
+    justify-content: space-between;
+    padding: 40px 9px 40px 9px;
+    font-size: 1.5em;
+  }
+
+  .info {
+    padding: 25px;
+  }
+
+  .back-link {
+    font-size: 1.2em;
+    padding: 15px 30px;
+  }
+
+  .city {
+    font-size: 1.8em;
+  }
+
+  .banner2 {
+    height: 600px;
+  }
+}
+
+/* Extra extra large devices (extra large desktops, 1400px and up) */
+@media screen and (min-width: 1400px) {
+  .detail {
+    font-size: 1.8em;
+    padding: 60px 9px 60px 9px;
+  }
+
+  .info {
+    padding: 35px;
+    font-size: 1.3em;
+  }
+
+  .city {
+    font-size: 2.5em;
+    margin: 30px 0 30px 7px;
+  }
+
+  .back-link {
+    font-size: 1.3em;
+    padding: 20px 40px;
+    margin-top: 40px;
+  }
+
+  .banner2 {
+    height: 600px;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
 }
