--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -73,7 +73,7 @@ h1 {
 
 .banner::after {
   content: '';
-  background: rgba(236, 76, 138, 0.6);
+  background: rgba(236, 76, 138, 0.4);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -81,7 +81,30 @@ h1 {
   right: 0;
 }
 
+.banner-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(235, 255, 13);
+  font-size: 3em;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  width: 80%;
+  height: 50%;
+  line-height: 1.2;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
+
 @media screen and (max-width: 600px) {
+  .banner-title {
+    font-size: 2em;
+  }
+
   .button {
     width: 100%;
     max-height: 220px;
@@ -89,6 +112,10 @@ h1 {
 }
 
 @media screen and (min-width: 768px) {
+  .banner-title {
+    font-size: 2.5em;
+  }
+
   .container {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -110,6 +137,10 @@ h1 {
 }
 
 @media screen and (min-width: 1024px) {
+  .banner-title {
+    font-size: 3em;
+  }
+
   .container {
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
@@ -122,6 +153,10 @@ h1 {
 }
 
 @media screen and (min-width: 1200px) {
+  .banner-title {
+    font-size: 3.5em;
+  }
+
   .container {
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
